完善校验功能
