# src/api/controllers/indexController.ts
@@ -1,7 +1,7 @@
-import { Get, JsonController, QueryParam, Body, Post } from "routing-controllers";
+import { Get, JsonController, QueryParam, Body, Post, CurrentUser, Authorized } from "routing-controllers";
 import { env } from '../../env'
 import AjaxResponse from "../common_class/AjaxResponse";
-import {CryptHelper,MD5} from "../../utils"
+import {CryptHelper,MD5,TokenHelper} from "../../utils"
 import { User } from "../models/User";
 import { UserService } from "../services/UserService";
 
@@ -25,11 +25,18 @@ export default class UserController {
             if(encryptPassword !== findUser.password){
                 return new AjaxResponse(-1, '密码错误');
             }
-            return new AjaxResponse(1, '登录成功', findUser);
+            const token =  TokenHelper.createToken(findUser);
+            return new AjaxResponse(1, '登录成功', token);
         }catch(e){
             console.error(e);
             return new AjaxResponse(1, '密码不正确');
         }
+    }
+
+    @Get('current-user')
+    @Authorized()
+    public getCurrentUser(@CurrentUser() user:User):User{
+        return user;
     }
 
     @Post('register')
